--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,7 @@ jobs:
         git update-ref -d refs/heads/gh-pages
         rm -rf *
         mv ../_build/html/* .
+        rm README.html
         git add .
         git commit -m "Deploy $GITHUB_SHA to gh-pages"
         git push --force --set-upstream origin gh-pages
