--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -27,9 +27,10 @@ jobs:
       with:
         path: "requirements.txt"
 
-    - name: make docs
+    - name: make docs and cname
       run: |
         make html
+        echo 'my.custom.domain' > _build/html/DUMMY_CNAME
 
     - name: Upload artifaces
       uses: actions/upload-artifact@v4
