rm rendered README.html

--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -30,6 +30,7 @@ jobs:
     - name: make docs and cname
       run: |
         make html
+        rm _build/html/README.html
         echo 'my.custom.domain' > _build/html/DUMMY_CNAME
 
     - name: Upload artifaces
